conf/k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
  namespace: otus
  labels:
    app: store
spec:
  selector:
    matchLabels:
      app: store
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
        - image: echernukha/store
          name: storecontainer
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 5
