conf/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
  namespace: otus
spec:
  selector:
    app: store
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http
  type: NodePort
