conf/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: store-service
  namespace: microarch-test
spec:
  selector:
    app: store
  ports:
  - protocol: TCP
    port: 8000
    targetPort: http
  type: NodePort
