conf/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/auth-url: http://auth.otus.svc.cluster.local:8000/api/v1/auth
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Token
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          service:
            name: user
            port:
              number: 8000
        pathType: Prefix
        path: /user(/|$)(.*)
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
        - backend:
            service:
              name: auth
              port:
                number: 8000
          pathType: Prefix
          path: /auth(/|$)(.*)
