conf/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  namespace: microarch-test
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - backend:
          service:
            name: store-service
            port:
              number: 8000
        pathType: Prefix
        path: /
